templatia-derive/tests/compile_fail/unsupported_map.rs
use std::collections::HashMap;
use templatia::Template;

#[derive(Template)]
#[templatia(template = "map={map}")]
struct HasMap {
    map: HashMap<String, i32>,
}
